# OnKiGenerics

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.rst
.github/workflows/: linux.yml  windows.yml
include/OnKiGenerics/: alternative_type.hpp  array_size.hpp  container_factory.hpp  create_array.hpp  default_container.hpp  default_dynamic_container.hpp  incremented_type.hpp  is_std_array.hpp  remove_cvref.hpp
test/: CMakeLists.txt  alternative_type_tests.cpp  container_factory_tests.cpp  create_array_tests.cpp  default_container_tests.cpp  default_dynamic_container_tests.cpp  incremented_type_tests.cpp  is_std_array_tests.cpp  remove_cvref_tests.cpp
